@@ -1,6 +1,7 @@
 from ftw.builder import Builder
 from ftw.builder import create
 from ftw.publisher.core import belongs_to_parent
+from ftw.publisher.core.belongs_to_parent import get_main_obj_belonging_to
 from ftw.publisher.core.tests import IntegrationTestCase
 from ftw.publisher.core.utils import IS_PLONE_5
 from Products.CMFCore.utils import getToolByName
@@ -20,6 +21,11 @@ class TestBelongsToParent(IntegrationTestCase):
         self.set_workflow(Folder=None)
         self.assertFalse(belongs_to_parent(create(Builder('folder'))))
 
+    def test_folders_main_object_is_itself(self):
+        self.set_workflow(Folder=None)
+        folder = create(Builder('folder'))
+        self.assertEquals(get_main_obj_belonging_to(folder), folder)
+
 
 class TestFTWSimplelayoutBelongsToParent(IntegrationTestCase):
 
@@ -29,6 +35,13 @@ class TestFTWSimplelayoutBelongsToParent(IntegrationTestCase):
         self.set_workflow({'ftw.simplelayout.ContentPage': 'simple_publication_workflow',
                            'ftw.simplelayout.TextBlock': None,
                            'File': None})
+
+    def test_textblocks_main_obj_is_parent(self):
+        self.set_workflow(Folder=None)
+        page = create(Builder('sl content page'))
+        textblock = create(Builder('sl textblock').within(page))
+
+        self.assertEquals(get_main_obj_belonging_to(textblock), page)
 
     def test_content_page_does_not_belong_to_parent(self):
         page = create(Builder('sl content page').titled(u'The Page'))
